tests/fixtures/invalid/pow_str_int_bytes.py
# Cannot call pow() with Str, Int, Bytes
x = pow("hello", 1, b"hello")
